<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSendMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/get" />

        <Button
            android:id="@+id/btnReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/set_zero" />
        <Button
            android:id="@+id/btnClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/clear" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dev"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etSetSerial"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="@string/set_serial"
            android:lines="1"
            android:text="@string/ttys1"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/baud_rate"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etBaudRate"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="@string/write_baud_rate"
            android:lines="1"
            android:text="@string/_19200"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnOpen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tv_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dev"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etSetSerial2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="@string/set_serial"
            android:lines="1"
            android:text="@string/ttys0"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/baud_rate"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etBaudRate2"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="@string/write_baud_rate"
            android:lines="1"
            android:text="@string/_19200"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnOpen2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tv_msg2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </ScrollView>
</LinearLayout>